# per

./: .gitattributes  .gitignore  CNAME  EXTRACTION.md  NORMALIZATION.md  README.md  dune  index.css  index.html  mix.exs  per.opam
.github/workflows/: ci.yml
doc/: per.tex
lib/: book.per
lib/foundations/: inductive.per  mltt.per
lib/mix/tasks/: per.base.ex  per.compile.ex  per.repl.ex  per.test.ex
lib/per/: ast.ex  codegen.ex  compiler.ex  desugar.ex  dnf.ex  layout.ex  lexer.ex  parser.ex  prof.ex  typechecker.ex
lib/per/extensions/: lexerAgda.ex  parseAgda.ex
priv/: book.per
priv/agda/: book.agda
priv/agda/foundations/: inductive.agda  mltt.agda  univalent.agda
priv/foundations/: inductive.per  univalent.per
priv/per/: book.per
priv/per/foundations/: constsquares.per  inductive.per  mltt.per
src/: check.ml  decl.ml  dune  elab.ml  error.ml  exp.ml  expr.ml  formula.ml  ident.ml  lexer.mll  module.ml  parser.mly  per.ml  prefs.ml  prelude.ml  prettyprinter.ml  printer.ml  rbv.ml  reader.ml  repl.ml  token.ml  trace.ml
src/ocaml/: check.ml  dnf.ml  dune  error.ml  parser.mly  per.ml  prof.ml
test/agda/: canonical.agda  homotopical.agda
test/frank/: Samples.frank
test/frank/Data/: List_test.frank
test/frank/Test/: List.frank  W.frank
test/per/: Canonical.per  Homotopical.per  Samples.per  constcubes.per  nat.per  test_w.per
